--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "lp-softskills",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A landing page made in Gatsby about the soft skill of resillience",
   "version": "0.1.0",
   "license": "0BSD",
+  "homepage": "http://wilsonnet.github.io/lp-softskills",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -11,11 +12,13 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-plugin-postcss": "^3.1.0",
+    "gh-pages": "^3.1.0",
     "postcss": "^8.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
